Started with basic structure

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
-<div class="calcbody">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<div class="screen"></div>
+  <div class="calcbody">
 
-<div class="buttons1">
-<div class="clr"></div>
-<div class="delete"></div>
-</div>
+  <div class="screen"></div>
+
+  <div class="buttons1">
+<button class="buttontop clear">CLEAR</button>
+<button class="buttontop delete">DELETE</button>
+  </div>
+
+  <div class="buttons2">
+
+<button class="button button1">7</button>
+<button class="button button2">8</button>
+<button class="button button3">9</button>
+<button class="button button4"></button>
+<button class="button button5"></button>
+<button class="button button6"></button>
+<button class="button button7"></button>
+<button class="button button8"></button>
+<button class="button button9"></button>
+<button class="button button10"></button>
+<button class="button button11"></button>
+<button class="button button12"></button>
+<button class="button button13"></button>
+<button class="button button14"></button>
+<button class="button button15"></button>
+<button class="button button16"></button>
+
+  </div>
 
 
-  
-</div>
+  </div>
+</body>
+</html>
