--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 <button class="button button1">7</button>
 <button class="button button2">8</button>
 <button class="button button3">9</button>
-<button class="button button4"></button>
-<button class="button button5"></button>
-<button class="button button6"></button>
-<button class="button button7"></button>
-<button class="button button8"></button>
-<button class="button button9"></button>
-<button class="button button10"></button>
-<button class="button button11"></button>
-<button class="button button12"></button>
-<button class="button button13"></button>
-<button class="button button14"></button>
-<button class="button button15"></button>
-<button class="button button16"></button>
+<button class="button button4">/</button>
+<button class="button button5">4</button>
+<button class="button button6">5</button>
+<button class="button button7">6</button>
+<button class="button button8">*</button>
+<button class="button button9">1</button>
+<button class="button button10">2</button>
+<button class="button button11">3</button>
+<button class="button button12">-</button>
+<button class="button button13">.</button>
+<button class="button button14">0</button>
+<button class="button button15">=</button>
+<button class="button button16">+</button>
 
   </div>
 
