added outrun collor pallete

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 
   <div class="buttons2">
 
-<button class="button button1">7</button>
-<button class="button button2">8</button>
-<button class="button button3">9</button>
-<button class="button button4">/</button>
-<button class="button button5">4</button>
-<button class="button button6">5</button>
-<button class="button button7">6</button>
-<button class="button button8">*</button>
-<button class="button button9">1</button>
-<button class="button button10">2</button>
-<button class="button button11">3</button>
-<button class="button button12">-</button>
-<button class="button button13">.</button>
-<button class="button button14">0</button>
-<button class="button button15">=</button>
-<button class="button button16">+</button>
+<button class="button button1 num">7</button>
+<button class="button button2 num">8</button>
+<button class="button button3 num">9</button>
+<button class="button button4 op">/</button>
+<button class="button button5 num">4</button>
+<button class="button button6 num">5</button>
+<button class="button button7 num">6</button>
+<button class="button button8 op">*</button>
+<button class="button button9 num">1</button>
+<button class="button button10 num">2</button>
+<button class="button button11 num">3</button>
+<button class="button button12 op">-</button>
+<button class="button button13 else">.</button>
+<button class="button button14 num">0</button>
+<button class="button button15 else">=</button>
+<button class="button button16 op">+</button>
 
   </div>
 
