finished ui, started js

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 <link rel="stylesheet" href="style.css">
+<script src="/script.js"></script> 
 </head>
 <body>
 
   <div class="calcbody">
 
-  <div class="screen"></div>
+  <div class="screen"><p id="um">124325</p></div>
 
   <div class="buttons1">
 <button class="buttontop clear">CLEAR</button>
