Added some buttons logic

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 <link rel="stylesheet" href="style.css">
-<script src="/script.js"></script> 
+
 </head>
 <body>
 
   <div class="calcbody">
 
-  <div class="screen"><p id="um">124325</p></div>
+  <div class="screen"><p id="screenTxt">0   _   0&nbsp&nbsp&nbsp&nbsp</p></div>
 
   <div class="buttons1">
 <button class="buttontop clear">CLEAR</button>
@@ -28,7 +28,7 @@
 <button class="button button5 num">4</button>
 <button class="button button6 num">5</button>
 <button class="button button7 num">6</button>
-<button class="button button8 op">*</button>
+<button class="button button8 op">x</button>
 <button class="button button9 num">1</button>
 <button class="button button10 num">2</button>
 <button class="button button11 num">3</button>
@@ -42,5 +42,6 @@
 
 
   </div>
+  <script src="/script.js"></script>
 </body>
 </html>
